# fraud-detection

./: LICENSE
fraud-detection/: .env.example  .gitignore  README.md  mlflow.db  pyproject.toml
fraud-detection/.dvc/: config
fraud-detection/.dvc/tmp/: lock
fraud-detection/conf/: logging.yml
fraud-detection/conf/base/: catalog.yml  parameters.yml
fraud-detection/src/fraud_detection/: pipeline_registry.py  settings.py
fraud-detection/src/fraud_detection/pipelines/data_processing/: nodes.py  pipeline.py
