[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "fraud_detection"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.2.0",
    "kedro-datasets>=9.2.0",
    "mlflow>=3.9.0",
    "dvc>=3.66.1",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.2",
    "dvc-s3>=3.3.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "imbalanced-learn>=0.14.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
fraud-detection = "fraud_detection.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.setuptools.dynamic.version]
attr = "fraud_detection.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "fraud_detection"
project_name = "fraud_detection"
kedro_init_version = "1.2.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/fraud_detection -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=7.4.4",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]
